--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-cosmos": "^5.7.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
+    "sass": "^1.62.1",
+    "scss": "^0.2.4",
+    "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "storybook": "^7.0.11",
     "web-vitals": "^2.1.4"
